# OpenFHE-LinearAlgebra

./: CMakeLists.txt  LICENSE  README.md
include/: EncryptedMatrix.hpp
src/: EncryptedMatrix.cpp
tests/: encrypted_matrix_tests.cpp
